<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.reallylastone.lichessbot</groupId>
    <artifactId>LichessBot</artifactId>
    <version>1</version>
    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
    </properties>

</project>
